avoid persistent home bar on ios by making footer larger, changed substance icon

--- a/assets/constants.scss
+++ b/assets/constants.scss
@@ -1,3 +1,4 @@
 $app-max-width: 500px;
 
 $footer-height: 60px;
+$ios-footer-height: 80px;
