--- a/assets/global.scss
+++ b/assets/global.scss
@@ -11,6 +11,8 @@ body {
 
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  overscroll-behavior-y: none;
 }
 
 * {
@@ -37,6 +39,11 @@ main {
   height: calc(100vh - $footer-height);
   padding: 4px;
   padding-top: 0;
+
+  // iOS only (avoid persistent home bar)
+  @supports (-webkit-touch-callout: none) {
+    height: calc(100vh - $ios-footer-height);
+  }
 }
 
 [class~="centered"] {
